--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,3 @@
-# =============================================================================
-# Triggers: Push to main, Pull requests to main
-# Actions:
-#   1. Builds unit tests and runs on native_sim
-#   2. Builds misogate for nrf7002dk
-#   3. Builds misonode for nrf7002dk
-#   4. Uploads test logs and .hex artifacts
-# =============================================================================
 
 name: CI Build & Test
 
@@ -17,6 +9,9 @@ on:
   workflow_dispatch:
 
 jobs:
+  # ===========================================================================
+  # Job 1: Build and run unit tests on native_sim
+  # ===========================================================================
   unit-tests:
     name: Unit Tests (native_sim)
     runs-on: ubuntu-22.04
@@ -27,19 +22,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Free up disk space
       - name: Free disk space
         run: |
           echo "Disk space before cleanup:"
           df -h
-          
-          # Remove unnecessary tools to free space
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
           sudo rm -rf /opt/hostedtoolcache/CodeQL
           sudo docker image prune --all --force
-          
           echo "Disk space after cleanup:"
           df -h
 
@@ -52,16 +43,20 @@ jobs:
             python3-dev python3-pip python3-setuptools python3-tk python3-wheel \
             xz-utils file make gcc gcc-multilib g++-multilib libsdl2-dev
 
-      - name: Install West and Python dependencies
-        run: |
-          pip3 install west
+      - name: Install West
+        run: pip3 install west
 
-      - name: Initialize West workspace
+      - name: Setup nRF Connect SDK
         run: |
-          west init -l .
+          # Initialize west with nRF Connect SDK
+          west init -m https://github.com/nrfconnect/sdk-nrf --mr v2.9.0 ncs
+          cd ncs
           west update --narrow --fetch-opt=--depth=1
+          
+          # Link our project into the workspace
+          ln -s $GITHUB_WORKSPACE project
 
-      - name: Install Zephyr SDK (minimal - native tools only)
+      - name: Install Zephyr SDK (native tools)
         run: |
           cd ~
           wget -q https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.8/zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
@@ -69,25 +64,28 @@ jobs:
           cd zephyr-sdk-0.16.8
           ./setup.sh -t x86_64-zephyr-elf -h -c
 
-      - name: Install Zephyr Python dependencies  
+      - name: Install Python dependencies
         run: |
-          pip3 install -r zephyr/scripts/requirements.txt
+          pip3 install -r ncs/zephyr/scripts/requirements.txt
+          pip3 install -r ncs/nrf/scripts/requirements.txt || true
 
       - name: Build unit tests
         env:
           ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
+        working-directory: ncs
         run: |
           west build -p always \
             -b native_sim/native/64 \
-            tests/unit_test \
+            project/tests/unit_test \
             --pristine \
             -- -DCONFIG_ZTEST=y
 
       - name: Run unit tests
+        working-directory: ncs
         run: |
-          west build -t run 2>&1 | tee test_output.log
+          west build -t run 2>&1 | tee $GITHUB_WORKSPACE/test_output.log
           
-          if grep -q "FAIL" test_output.log; then
+          if grep -q "FAIL" $GITHUB_WORKSPACE/test_output.log; then
             echo "::error::Unit tests failed"
             exit 1
           fi
@@ -99,12 +97,12 @@ jobs:
         if: always()
         with:
           name: unit-test-logs
-          path: |
-            test_output.log
-            build/zephyr/zephyr.log
+          path: test_output.log
           retention-days: 30
 
-  # Build misogate for nRF7002DK
+  # ===========================================================================
+  # Job 2: Build misogate for nRF7002DK
+  # ===========================================================================
   build-misogate:
     name: Build misogate (nRF7002DK)
     runs-on: ubuntu-22.04
@@ -136,10 +134,12 @@ jobs:
       - name: Install West
         run: pip3 install west
 
-      - name: Initialize West workspace
+      - name: Setup nRF Connect SDK
         run: |
-          west init -l .
+          west init -m https://github.com/nrfconnect/sdk-nrf --mr v2.9.0 ncs
+          cd ncs
           west update --narrow --fetch-opt=--depth=1
+          ln -s $GITHUB_WORKSPACE project
 
       - name: Install Zephyr SDK (ARM toolchain)
         run: |
@@ -149,16 +149,19 @@ jobs:
           cd zephyr-sdk-0.16.8
           ./setup.sh -t arm-zephyr-eabi -h -c
 
-      - name: Install Zephyr Python dependencies
-        run: pip3 install -r zephyr/scripts/requirements.txt
+      - name: Install Python dependencies
+        run: |
+          pip3 install -r ncs/zephyr/scripts/requirements.txt
+          pip3 install -r ncs/nrf/scripts/requirements.txt || true
 
       - name: Build misogate
         env:
           ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
+        working-directory: ncs
         run: |
           west build -p always \
             -b nrf7002dk/nrf5340/cpuapp \
-            misogate \
+            project/misogate \
             --pristine
 
       - name: Upload misogate artifacts
@@ -166,13 +169,14 @@ jobs:
         with:
           name: misogate-firmware
           path: |
-            build/zephyr/zephyr.hex
-            build/zephyr/zephyr.bin
-            build/zephyr/zephyr.elf
-            build/zephyr/.config
+            ncs/build/zephyr/zephyr.hex
+            ncs/build/zephyr/zephyr.bin
+            ncs/build/zephyr/zephyr.elf
           retention-days: 30
 
-  # Build misonode for nRF7002DK
+  # ===========================================================================
+  # Job 3: Build misonode for nRF7002DK
+  # ===========================================================================
   build-misonode:
     name: Build misonode (nRF7002DK)
     runs-on: ubuntu-22.04
@@ -204,10 +208,12 @@ jobs:
       - name: Install West
         run: pip3 install west
 
-      - name: Initialize West workspace
+      - name: Setup nRF Connect SDK
         run: |
-          west init -l .
+          west init -m https://github.com/nrfconnect/sdk-nrf --mr v2.9.0 ncs
+          cd ncs
           west update --narrow --fetch-opt=--depth=1
+          ln -s $GITHUB_WORKSPACE project
 
       - name: Install Zephyr SDK (ARM toolchain)
         run: |
@@ -217,16 +223,19 @@ jobs:
           cd zephyr-sdk-0.16.8
           ./setup.sh -t arm-zephyr-eabi -h -c
 
-      - name: Install Zephyr Python dependencies
-        run: pip3 install -r zephyr/scripts/requirements.txt
+      - name: Install Python dependencies
+        run: |
+          pip3 install -r ncs/zephyr/scripts/requirements.txt
+          pip3 install -r ncs/nrf/scripts/requirements.txt || true
 
       - name: Build misonode
         env:
           ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
+        working-directory: ncs
         run: |
           west build -p always \
             -b nrf7002dk/nrf5340/cpuapp \
-            misonode \
+            project/misonode \
             --pristine
 
       - name: Upload misonode artifacts
@@ -234,13 +243,14 @@ jobs:
         with:
           name: misonode-firmware
           path: |
-            build/zephyr/zephyr.hex
-            build/zephyr/zephyr.bin
-            build/zephyr/zephyr.elf
-            build/zephyr/.config
+            ncs/build/zephyr/zephyr.hex
+            ncs/build/zephyr/zephyr.bin
+            ncs/build/zephyr/zephyr.elf
           retention-days: 30
 
-  # Static Analysis (lightweight, no SDK needed)
+  # ===========================================================================
+  # Job 4: Static Analysis
+  # ===========================================================================
   static-analysis:
     name: Static Analysis
     runs-on: ubuntu-latest
@@ -257,32 +267,22 @@ jobs:
       - name: Run clang-format check
         run: |
           echo "Checking code formatting..."
-          ERRORS=0
-          for file in $(find misogate misonode tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50); do
+          find misogate misonode tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50 | while read file; do
             if [ -f "$file" ]; then
-              if ! clang-format --style=file --dry-run --Werror "$file" 2>/dev/null; then
+              clang-format --style=file --dry-run --Werror "$file" 2>/dev/null || \
                 echo "::warning file=$file::File needs formatting"
-                ERRORS=1
-              fi
             fi
           done
-          if [ "$ERRORS" -eq 1 ]; then
-            echo "::warning::Some files need formatting"
-          fi
           echo "✓ Format check complete"
 
       - name: Run cppcheck
         run: |
-          echo "Running static analysis..."
           cppcheck --error-exitcode=0 \
                    --enable=warning,performance,portability \
                    --suppress=missingIncludeSystem \
                    --suppress=unusedFunction \
-                   --suppress=unmatchedSuppression \
-                   --inline-suppr \
                    --quiet \
                    misogate/src misonode/src 2>&1 | tee cppcheck_report.txt || true
-          
           echo "✓ Static analysis complete"
 
       - name: Upload analysis reports
@@ -293,7 +293,9 @@ jobs:
           path: cppcheck_report.txt
           retention-days: 30
 
-  # Summary job
+  # ===========================================================================
+  # Summary
+  # ===========================================================================
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
@@ -311,12 +313,3 @@ jobs:
           echo "Build misonode:  ${{ needs.build-misonode.result }}"
           echo "Static Analysis: ${{ needs.static-analysis.result }}"
           echo "========================================"
-          
-          if [ "${{ needs.unit-tests.result }}" == "failure" ] || \
-             [ "${{ needs.build-misogate.result }}" == "failure" ] || \
-             [ "${{ needs.build-misonode.result }}" == "failure" ]; then
-            echo "::error::One or more CI jobs failed"
-            exit 1
-          fi
-          
-          echo "✓ All CI checks passed!"
