--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ on:
 
 jobs:
   # ===========================================================================
-  # Job 1: Build and run unit tests on native_sim
+  # Job 1: Build and run MMC5983MA unit tests
   # ===========================================================================
-  unit-tests:
-    name: Unit Tests (native_sim)
+  unit-tests-mmc5983ma:
+    name: Unit Tests - MMC5983MA (native_sim)
     runs-on: ubuntu-22.04
     
     steps:
@@ -27,14 +27,11 @@ jobs:
 
       - name: Free disk space
         run: |
-          echo "Disk space before cleanup:"
-          df -h
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
           sudo rm -rf /opt/hostedtoolcache/CodeQL
           sudo docker image prune --all --force
-          echo "Disk space after cleanup:"
           df -h
 
       - name: Install dependencies
@@ -69,39 +66,123 @@ jobs:
           pip3 install -r ncs/zephyr/scripts/requirements.txt
           pip3 install -r ncs/nrf/scripts/requirements.txt || true
 
-      - name: Build unit tests
+      - name: Build MMC5983MA unit tests
         env:
           ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
         working-directory: ncs
         run: |
           west build -p always \
             -b native_sim/native/64 \
-            project/tests/unit_test \
-            --pristine \
-            -- -DCONFIG_ZTEST=y
+            project/tests/mmc5983ma_test \
+            --pristine
 
-      - name: Run unit tests
+      - name: Run MMC5983MA unit tests
         working-directory: ncs
         run: |
-          west build -t run 2>&1 | tee $GITHUB_WORKSPACE/test_output.log
+          west build -t run 2>&1 | tee $GITHUB_WORKSPACE/mmc5983ma_test_output.log
           
-          if grep -q "FAIL" $GITHUB_WORKSPACE/test_output.log; then
-            echo "::error::Unit tests failed"
+          # Check for test failures
+          if grep -q "FAIL" $GITHUB_WORKSPACE/mmc5983ma_test_output.log; then
+            echo "::error::MMC5983MA unit tests failed"
             exit 1
           fi
           
-          echo "✓ All unit tests passed"
+          if grep -q "PASS" $GITHUB_WORKSPACE/mmc5983ma_test_output.log; then
+            echo "✓ MMC5983MA unit tests passed"
+          fi
 
       - name: Upload test logs
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: unit-test-logs
-          path: test_output.log
+          name: mmc5983ma-test-logs
+          path: mmc5983ma_test_output.log
           retention-days: 30
 
   # ===========================================================================
-  # Job 2: Build misogate for nRF7002DK
+  # Job 2: Build magsens for nRF7002DK
+  # ===========================================================================
+  build-magsens:
+    name: Build magsens (nRF7002DK)
+    runs-on: ubuntu-22.04
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            git cmake ninja-build gperf \
+            ccache dfu-util device-tree-compiler wget \
+            python3-dev python3-pip python3-setuptools python3-tk python3-wheel \
+            xz-utils file make gcc gcc-multilib g++-multilib libsdl2-dev
+
+      - name: Install West
+        run: pip3 install west
+
+      - name: Setup nRF Connect SDK
+        run: |
+          west init -m https://github.com/nrfconnect/sdk-nrf --mr v2.9.0 ncs
+          cd ncs
+          west update --narrow --fetch-opt=--depth=1
+          ln -s $GITHUB_WORKSPACE project
+
+      - name: Install Zephyr SDK (ARM toolchain)
+        run: |
+          cd ~
+          wget -q https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.8/zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          tar xf zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          cd zephyr-sdk-0.16.8
+          ./setup.sh -t arm-zephyr-eabi -h -c
+
+      - name: Install Python dependencies
+        run: |
+          pip3 install -r ncs/zephyr/scripts/requirements.txt
+          pip3 install -r ncs/nrf/scripts/requirements.txt || true
+
+      - name: Build magsens
+        env:
+          ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
+        working-directory: ncs
+        run: |
+          west build -p always \
+            -b nrf7002dk/nrf5340/cpuapp \
+            project/magsens \
+            --pristine
+
+      - name: Find and copy artifacts
+        if: always()
+        run: |
+          mkdir -p artifacts
+          find ncs/build -name "*.hex" -exec cp {} artifacts/ \; 2>/dev/null || true
+          find ncs/build -name "*.bin" -exec cp {} artifacts/ \; 2>/dev/null || true
+          find ncs/build -name "zephyr.elf" -exec cp {} artifacts/ \; 2>/dev/null || true
+          ls -la artifacts/
+
+      - name: Upload magsens artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: magsens-firmware
+          path: artifacts/
+          if-no-files-found: warn
+          retention-days: 30
+
+  # ===========================================================================
+  # Job 3: Build misogate for nRF7002DK
   # ===========================================================================
   build-misogate:
     name: Build misogate (nRF7002DK)
@@ -164,26 +245,14 @@ jobs:
             project/misogate \
             --pristine
 
-      - name: Find build outputs
-        if: always()
-        run: |
-          echo "=== Looking for .hex files ==="
-          find ncs/build -name "*.hex" 2>/dev/null || echo "No .hex files found"
-          echo ""
-          echo "=== Looking for zephyr.elf files ==="
-          find ncs/build -name "zephyr.elf" 2>/dev/null || echo "No zephyr.elf found"
-          echo ""
-          echo "=== Build directory structure ==="
-          ls -laR ncs/build/ 2>/dev/null | head -100 || echo "Build dir not found"
-
-      - name: Copy artifacts to workspace
+      - name: Find and copy artifacts
         if: always()
         run: |
           mkdir -p artifacts
           find ncs/build -name "*.hex" -exec cp {} artifacts/ \; 2>/dev/null || true
           find ncs/build -name "*.bin" -exec cp {} artifacts/ \; 2>/dev/null || true
           find ncs/build -name "zephyr.elf" -exec cp {} artifacts/ \; 2>/dev/null || true
-          ls -la artifacts/ || echo "No artifacts found"
+          ls -la artifacts/
 
       - name: Upload misogate artifacts
         uses: actions/upload-artifact@v4
@@ -195,7 +264,7 @@ jobs:
           retention-days: 30
 
   # ===========================================================================
-  # Job 3: Build misonode for nRF7002DK
+  # Job 4: Build misonode for nRF7002DK
   # ===========================================================================
   build-misonode:
     name: Build misonode (nRF7002DK)
@@ -258,26 +327,14 @@ jobs:
             project/misonode \
             --pristine
 
-      - name: Find build outputs
-        if: always()
-        run: |
-          echo "=== Looking for .hex files ==="
-          find ncs/build -name "*.hex" 2>/dev/null || echo "No .hex files found"
-          echo ""
-          echo "=== Looking for zephyr.elf files ==="
-          find ncs/build -name "zephyr.elf" 2>/dev/null || echo "No zephyr.elf found"
-          echo ""
-          echo "=== Build directory structure ==="
-          ls -laR ncs/build/ 2>/dev/null | head -100 || echo "Build dir not found"
-
-      - name: Copy artifacts to workspace
+      - name: Find and copy artifacts
         if: always()
         run: |
           mkdir -p artifacts
           find ncs/build -name "*.hex" -exec cp {} artifacts/ \; 2>/dev/null || true
           find ncs/build -name "*.bin" -exec cp {} artifacts/ \; 2>/dev/null || true
           find ncs/build -name "zephyr.elf" -exec cp {} artifacts/ \; 2>/dev/null || true
-          ls -la artifacts/ || echo "No artifacts found"
+          ls -la artifacts/
 
       - name: Upload misonode artifacts
         uses: actions/upload-artifact@v4
@@ -289,7 +346,7 @@ jobs:
           retention-days: 30
 
   # ===========================================================================
-  # Job 4: Static Analysis
+  # Job 5: Static Analysis
   # ===========================================================================
   static-analysis:
     name: Static Analysis
@@ -307,7 +364,7 @@ jobs:
       - name: Run clang-format check
         run: |
           echo "Checking code formatting..."
-          find misogate misonode tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50 | while read file; do
+          find misogate misonode magsens tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50 | while read file; do
             if [ -f "$file" ]; then
               clang-format --style=file --dry-run --Werror "$file" 2>/dev/null || \
                 echo "::warning file=$file::File needs formatting"
@@ -322,7 +379,7 @@ jobs:
                    --suppress=missingIncludeSystem \
                    --suppress=unusedFunction \
                    --quiet \
-                   misogate/src misonode/src 2>&1 | tee cppcheck_report.txt || true
+                   misogate/src misonode/src magsens/src 2>&1 | tee cppcheck_report.txt || true
           echo "✓ Static analysis complete"
 
       - name: Upload analysis reports
@@ -339,7 +396,7 @@ jobs:
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [unit-tests, build-misogate, build-misonode, static-analysis]
+    needs: [unit-tests-mmc5983ma, build-magsens, build-misogate, build-misonode, static-analysis]
     if: always()
     
     steps:
@@ -348,7 +405,8 @@ jobs:
           echo "========================================"
           echo "CI Pipeline Summary"
           echo "========================================"
-          echo "Unit Tests:      ${{ needs.unit-tests.result }}"
+          echo "MMC5983MA Tests: ${{ needs.unit-tests-mmc5983ma.result }}"
+          echo "Build magsens:   ${{ needs.build-magsens.result }}"
           echo "Build misogate:  ${{ needs.build-misogate.result }}"
           echo "Build misonode:  ${{ needs.build-misonode.result }}"
           echo "Static Analysis: ${{ needs.static-analysis.result }}"
