--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -18,11 +18,17 @@ CONFIG_DK_LIBRARY=y
 # ========================================
 # Heap and Stacks
 # ========================================
-CONFIG_HEAP_MEM_POOL_SIZE=16384
-CONFIG_MAIN_STACK_SIZE=6144
+# CONFIG_HEAP_MEM_POOL_SIZE=16384
+# CONFIG_MAIN_STACK_SIZE=6144
+# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+# CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=2048
+# CONFIG_NET_MGMT_EVENT_STACK_SIZE=2048
+
+CONFIG_HEAP_MEM_POOL_SIZE=32768
+CONFIG_MAIN_STACK_SIZE=8192
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=2048
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=2048
+CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=4096
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=4096
 
 # ========================================
 # Flash & Storage
@@ -38,7 +44,8 @@ CONFIG_STREAM_FLASH_ERASE=y
 CONFIG_WIFI_CREDENTIALS_STATIC=y
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
-
+# CONFIG_WIFI_CREDENTIALS_STATIC_SSID="KendrickKarma"
+# CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="00000000"
 # ========================================
 # Networking & Sockets
 # ========================================
@@ -90,10 +97,28 @@ CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
 CONFIG_MEMFAULT_LOGGING_ENABLE=y
 CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
 
-CONFIG_MEMFAULT_HTTP_ENABLE=n
-CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
-CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=n
-CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=n
+# CONFIG_MEMFAULT_HTTP_ENABLE=n
+# CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
+# CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=n
+# CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=n
+
+CONFIG_MEMFAULT_HTTP_ENABLE=y
+CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
+CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=y
+CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=y
+
+
+
+# # ==========================
+# # Memfault Upload Frequency
+# # ==========================
+
+# # 每 60 秒上传一次（可改成 30 / 120）
+# CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SEC=60
+
+# # 心跳（metrics heartbeat）60 秒一次
+# CONFIG_MEMFAULT_METRICS_HEARTBEAT_INTERVAL_SECS=60
+
 
 
 # ========================================
